--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.17",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
